--- a/spring-cloud-consul-client/src/main/resources/application.properties
+++ b/spring-cloud-consul-client/src/main/resources/application.properties
@@ -5,4 +5,4 @@ spring.cloud.consul.port=8500
 #设置不需要注册到 consul 中
 spring.cloud.consul.discovery.register=false
 
-SingleValue=hello,pig
+SingleValue=I am a pig
